--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -1,3 +1,77 @@
+<h2 class="ui center aligned large icon header">
+    <i class="circular bordered red coffee icon"></i>
+    Let's chat over coffee
+</h2>
 
-<h1>Chatroom Homepage</h1>
+<div class="ui two column grid">
+    <div class="twelve wide column">
+        <div class="ui fluid raised card chatbox">
+            <div class="content">
+                <div class="ui feed">
+                    <div class="event">
+                    <div class="content">
+                        <div class="summary">
+                        <em>Elliot Fu</em> added <em>Jenny Hess</em> as a friend
+                        </div>
+                    </div>
+                    </div>
+                    <div class="event">
+                    <div class="content">
+                        <div class="summary">
+                        <em>Stevie Feliciano</em> added <em>Elliot Fu</em> as a friend
+                        </div>
+                    </div>
+                    </div>
+                    <div class="event">
+                    <div class="content">
+                        <div class="summary">
+                        <em>Helen Troy</em> added <em>Christian Rocha</em> as a friend
+                        </div>
+                    </div>
+                    </div>
+                    <div class="event">
+                    <div class="content">
+                        <div class="summary">
+                        <em>Christian Rocha</em>: Test Message
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="extra content">
+                <form class="ui reply form">
+                    <div class="field">
+                        <div class="ui fluid icon">
+                            <div class="ui icon input">
+                                <input type="text" placeholder="Enter Message">
+                                <i class="bordered inverted red edit icon"></i>
+                            </div>
+                             
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>        
+
+    <div class="four wide column">
+        <div class="ui fluid raised card chatbox">
+            <div class="content">
+                <div class="ui inverted vertical menu">
+                    <a class="active item">
+                    Home
+                    </a>
+                    <a class="item">
+                    Messages
+                    </a>
+                    <a class="item">
+                    Friends
+                    </a>
+                </div>
+            </div>    
+        </div>
+    </div>
+
+</div>
 
