--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,7 +9,7 @@
         <div class="ui dropdown item">
           Account <i class="dropdown icon"></i>
           <div class="menu">
-            <%= link_to 'Log In', login_path, class:"item" %>
+            <%= link_to 'Log In', new_session_path, class:"item" %>
 
           </div>
         </div>
