--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -8,18 +8,9 @@
         <div class="ui fluid raised card chatbox">
             <div class="content">
                 <div class="ui feed">
-                    <div class="event">
-                    <div class="content">
-                        <div class="summary">
-                          <br>  
-                            <% @messages.each do |message| %>
-                                <em><%= message.user.username %></em>: <%= message.body %>
-                                <br><br>
-                            <% end %>
-                        
-                        </div>
-                    </div>
-                    </div>
+                
+                    <%= render @messages %>
+                    
                 </div>
             </div>
         </div>
