--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,12 +3,12 @@
     <%= link_to "Chatroom", chatroom_index_path, class: "item" %>
     <a class="item">Messages</a>
     <div class="right menu">
-      <% if current_user %>
+      <% if logged_in? %>
         <%= link_to "Log Out", destroy_session_path, class:"item",  data: { turbo_method: :delete } %>
         
       <% else %>  
         <%= link_to 'Log In', new_session_path, class: "item" %>
-        <%= link_to 'Create an Account', new_user_path, class: "ui primary button" %>
+        <%= link_to 'Register', new_user_path, class: "ui primary button" %>
       <% end %>
     
     </div>
