--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_include_tag "application" %>
     <%= javascript_importmap_tags %>
   </head>
 
@@ -15,6 +15,7 @@
     <%= render 'layouts/navigation' %>
 
   <div class="ui container">
+    <%= render 'layouts/messages' %>
     <%= yield %>
   </div>
   </body>
