--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -13,6 +13,16 @@
                     
                 </div>
             </div>
+            <div class="extra content">
+                <%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: message_path, data: { turbo: false }) do |f| %>
+                    <div class="field">
+                        <div class="ui fluid icon input">
+                            <%= f.text_field :body %>
+                            <%= f.button '<i class="bordered inverted orange edit icon"></i>'.html_safe %>
+                        </div>
+                    </div>
+                <% end %>>
+            </div>
         </div>
     </div>
                            
