no errors with static stuff

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -9,24 +9,23 @@
             <div class="content">
                 <div class="ui feed">
                 
-                    <%= render @messages %>
+                    <%= render @message %>
                     
                 </div>
             </div>
             <div class="extra content">
-                <%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: message_path, data: { turbo: false }) do |f| %>
+                <%= form_for(@message, html: {class:'ui reply form', role: :form}, url: message_path, data: {turbo: false}) do |f| %>
                     <div class="field">
-                        <div class="ui fluid icon input">
+                        <div class="ui flui icon input">
                             <%= f.text_field :body %>
-                            <%= f.button '<i class="bordered inverted orange edit icon"></i>'.html_safe %>
+                            <%=  f.button '<i class="bordered inverted orange edit icon"></i>'.html_safe %>
                         </div>
                     </div>
-                <% end %>>
+                <% end %>
             </div>
         </div>
     </div>
                            
-
     <div class="four wide column">
         <div class="ui fluid raised card chatbox">
             <div class="content">
@@ -46,4 +45,3 @@
     </div>
 
 </div>
-
