messages are working

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -9,7 +9,7 @@
             <div class="content">
                 <div class="ui feed">
                 
-                    <%= render @message %>
+                    <%= render @messages %>
                     
                 </div>
             </div>
