--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,25 +1,9 @@
-<div class="event">
-    <div class="content">
-      <div class="summary">
-        <em>user1</em>: This is a message
-      </div>
-    </div>
-</div>
-
-
-<div class="event">
-    <div class="content">
-    <div class="summary">
-      <em>user3</em>: This is another message
-    </div>
-  </div>
-</div>
 
 <div class="event">
   <div class="content">
-  <div class="summary">
-    <em>user8</em>: and another message
+    <div class="summary">
+      <em><%= message.user.username %></em>: <%= message.body %>
+    </div>
   </div>
-</div>
 </div>
 
