--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,3 +3,20 @@
 .chatbox {
     height:450px;
 }
+
+.ui.fluid.raised.card.chatbox {
+    display: flex;
+    flex-direction: column; /* Vertically align items */
+    width: 100%;
+}
+
+.ui.reply.form {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+#messages {
+    height: 15em;
+    overflow: auto;
+}
