--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -17,7 +17,7 @@
             <div class="extra content">
                 <%= form_for(@message, html: {class:'ui reply form', role: :form}, url: message_path, remote: true, data: {turbo: false}) do |f| %>
                     <div class="field">
-                        <div class="ui flui icon input">
+                        <div class="ui fluid icon input">
                             <%= f.text_field :body %>
                             <%=  f.button '<i class="bordered inverted orange edit icon"></i>'.html_safe %>
                         </div>
